syntax = "proto3";
package pb;
option go_package = "./pb";
import "internal/error/pb/error.proto";

service FileService{
rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
}
message UploadFileRequest {
  string fileName = 1;
  int64 size = 2;
  bytes content = 3;
  string folder = 4;
}
message UploadFileResponse {
  string url = 1;
  error.ErrorResponse error = 2;
}

